k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: learn
spec:
  replicas: 2
  selector: 
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: backend
          image: localhost:5000/learn/backend
          ports:
            - containerPort: 3000
