k8s/database-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-ip-service
  namespace: learn
spec:
  type: ClusterIP
  selector:
    component: database
  ports:
    - port: 5432
      targetPort: 5432
