k8s/database-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-node-port
  namespace: learn
spec:
  type: NodePort
  selector:
    component: database
  ports:
    - port: 15432
      targetPort: 5432
      nodePort: 30432
