k8s/frontend-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ip-service
  namespace: learn
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - port: 80
      targetPort: 80
