k8s/frontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-node-port
  namespace: learn
spec:
  type: NodePort
  selector:
    component: frontend
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 32000
